# workshop_docker

./: Dockerfile  README.md  pyproject.toml
